# customer-churn-prediction

./: .gitignore  .project-meta.json  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py  utils.py
app/components/: cohort.py  performance.py  predict.py
configs/: best_params.yaml  config.yaml
data/: README.md
notebooks/: 01_eda_data_quality.ipynb  02_eda_churn_drivers.ipynb  03_feature_engineering.ipynb  04_baseline_models.ipynb  05_gbm_models.ipynb  06_hyperparameter_tuning.ipynb  07_imbalance_threshold.ipynb  08_model_evaluation.ipynb  09_shap_interpretability.ipynb
reports/: threshold_analysis.md
scripts/: train_baselines.py  train_gbm.py  tune_xgboost.py
src/: __init__.py
src/data/: __init__.py  load.py  pipeline.py  preprocess.py  schema.py  split.py  validate.py
src/evaluation/: __init__.py  interpretability.py  metrics.py  plots.py  threshold.py
src/features/: __init__.py  build_features.py  eda_helpers.py
src/models/: __init__.py  baseline.py  cv.py  gbm.py  imbalance.py  tuning.py
src/utils/: mlflow_utils.py  plotting.py
tests/: conftest.py  test_features.py  test_preprocess.py
